apps/web/domainnumbers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domainnumbers
spec:
  selector:
    app: domainnumbers
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
