apps/web/domainnumbers/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: domainnumbers
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: domainnumbers
          port: 80
